--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,13 +10,32 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
-
+  build-linux:
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
-    - name: Build
-      run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
+    - name: Install Rust
+      run: rustup update stable
+    - name: Build for Linux
+      run: cargo build --release --verbose
+    - name: Upload Linux Artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: linux-binary
+        path: target/release/ls-ygg-uuid-lookuper
+
+  build-windows:
+    runs-on: windows-latest
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Install Rust
+      run: rustup update stable
+    - name: Build for Windows
+      run: cargo build --release --verbose
+    - name: Upload Windows Artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: windows-binary
+        path: target/release/ls-ygg-uuid-lookuper.exe
