⭐Feat: Make Action running less feq
Added: Limit Action Workflows running when only main.rs is modified

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,10 +1,14 @@
-name: Rust
+name: master build
 
 on:
   push:
     branches: [ "master" ]
+    paths:
+      - "src/main.rs"
   pull_request:
     branches: [ "master" ]
+    paths:
+      - "src/main.rs"
 
 env:
   CARGO_TERM_COLOR: always
