--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,7 @@ edition = "2021"
 
 [dependencies]
 reqwest = { version = "0.12.5", features = ["blocking", "json"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+serde = { version = "1.0.208", features = ["derive"] }
+serde_json = "1.0.125"
+regex = "1.10.6"
+```
