--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -9,7 +9,8 @@ on:
     branches: [ "master" ]
     paths:
       - "src/main.rs"
-      - Cargo.toml
+      - "Cargo.toml"
+      - ".github/workflows/rust.yml"
 
 env:
   CARGO_TERM_COLOR: always
