--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ reqwest = { version = "0.12.5", features = ["blocking", "json"] }
 serde = { version = "1.0.208", features = ["derive"] }
 serde_json = "1.0.125"
 regex = "1.10.6"
+tokio = { version = "1.42.0", features = ["full"] }
